--- a/src/assets/sass/headers.sass
+++ b/src/assets/sass/headers.sass
@@ -8,6 +8,7 @@
   -moz-transition: all 0.5s ease-in-out
   -o-transition: all 0.5s ease-in-out
   transition: all 0.5s ease-in-out
+  margin-top: 25px
 
   &.animating
     position: absolute
@@ -16,3 +17,10 @@
     height: 100vh
     left: 0
     top: 0
+    margin-top: 0px
+
+.navbar-brand
+  margin-right: 0.75rem
+  +mobile
+    margin-left: 1rem
+    margin-right: 0rem
