--- a/src/assets/sass/landing.sass
+++ b/src/assets/sass/landing.sass
@@ -4,6 +4,8 @@
   position: relative
 
   .hero-body
+    background-color: transparentize($primary, 0.95)
+    overflow: hidden
     .level
       margin-top: 15rem
       padding: 0rem 10rem
