Update landing page to match test sketch work

--- a/src/assets/sass/headers.sass
+++ b/src/assets/sass/headers.sass
@@ -62,7 +62,7 @@
         background-color: transparent
         color: inherit
       &.is-active
-        color: $white-ter
+        color: $yellow
         transform: rotate(180deg)
         transition: color 1s, transform 0.5s
         span
@@ -72,7 +72,7 @@
             transform: translateY(-6px) rotate(-45deg)
             opacity: 1
         &:focus, &:hover
-          color: $white-ter
+          color: $yellow
   .nav
     .navbar-menu
       height: 0
