--- a/src/assets/sass/landing.sass
+++ b/src/assets/sass/landing.sass
@@ -1,10 +1,10 @@
 .landing-intro
   background-color: #EAEBEE
-  background-image: linear-gradient(-180deg, #EAEBEE 0%, #EAEBEE 23%, #E1E3E6 57%, #EAEBEE 62%, #D0D3D9 100%)
+  // background-image: linear-gradient(-180deg, #EAEBEE 0%, #EAEBEE 23%, #E1E3E6 57%, #EAEBEE 62%, #D0D3D9 100%)
+  background-image: linear-gradient(-180deg, #F2C53D 0%, #F2C53D 23%, #F9D757 57%, #F7CD4E 62%, #F2C53D 99%)
   position: relative
-
   .hero-body
-    background-color: transparentize($primary, 0.95)
+    // background-color: transparentize($primary, 0.95)
     overflow: hidden
     .level
       margin-top: 15rem
@@ -43,7 +43,7 @@
           bottom: -5rem
           transition: all 0.5s ease-in-out
           width: 90%
-          box-shadow: 0 0 25px 15px rgba(140,140,140,0.20)
+          box-shadow: 0 0 25px 15px rgba(0,0,0,0.05)
         &:after
           background-color: $primary
           bottom: 0.25rem
@@ -57,7 +57,7 @@
           margin-top: 2rem
           margin-bottom: 0rem
           &:before
-            box-shadow: 0 0 25px 20px rgba(140,140,140,0.25)
+            box-shadow: 0 -1rem 25px 20px rgba(0,0,0,0.10)
             margin-bottom: 0.5rem
             width: 95%
 
@@ -68,9 +68,9 @@
             content: attr(data-text)
             text-shadow: 3px -3px 0 hsl(0, 0%, 89%), 4px -4px 0 hsl(0, 0%, 87%), 5px -5px 0 hsl(0, 0%, 85%)
           &:after
-            box-shadow: 1px -1px 0 darken($primary, 6%), 2px -2px 0 darken($primary, 8%)
+            box-shadow: 1px -1px 0 darken($primary, 2%), 2px -2px 0 darken($primary, 3%)
         &:after
-          box-shadow: 3px -3px 0 darken($primary, 10%), 4px -4px 0 darken($primary, 12%), 5px -5px 0 darken($primary, 14%), 6px -6px 0 darken($primary, 16%), 7px -7px 0 darken($primary, 17%), 8px -8px 0 darken($primary, 18%), 9px -9px 0 darken($primary, 19%), 10px -10px 0 darken($primary, 20%)
+          box-shadow: 3px -3px 0 darken($primary, 4%), 4px -4px 0 darken($primary, 5%), 5px -5px 0 darken($primary, 6%), 6px -6px 0 darken($primary, 7%), 7px -7px 0 darken($primary, 8%), 8px -8px 0 darken($primary, 9%), 9px -9px 0 darken($primary, 10%), 10px -10px 0 darken($primary, 11%)
 
       .level-right .level-item
         text-shadow: -1px -1px 0 hsl(0, 0%, 93%), -2px -2px 0 hsl(0, 0%, 91%)
@@ -79,9 +79,9 @@
               content: attr(data-text)
               text-shadow: -3px -3px 0 hsl(0, 0%, 89%), -4px -4px 0 hsl(0, 0%, 87%), -5px -5px 0 hsl(0, 0%, 85%)
             &:after
-              box-shadow: -1px -1px 0 darken($primary, 6%), -2px -2px 0 darken($primary, 8%)
+              box-shadow: -1px -1px 0 darken($primary, 2%), -2px -2px 0 darken($primary, 3%)
         &:after
-          box-shadow: -3px -3px 0 darken($primary, 10%), -4px -4px 0 darken($primary, 12%), -5px -5px 0 darken($primary, 14%), -6px -6px 0 darken($primary, 16%), -7px -7px 0 darken($primary, 17%), -8px -8px 0 darken($primary, 18%), -9px -9px 0 darken($primary, 19%), -10px -10px 0 darken($primary, 20%)
+          box-shadow: -3px -3px 0 darken($primary, 4%), -4px -4px 0 darken($primary, 5%), -5px -5px 0 darken($primary, 6%), -6px -6px 0 darken($primary, 7%), -7px -7px 0 darken($primary, 8%), -8px -8px 0 darken($primary, 9%), -9px -9px 0 darken($primary, 10%), -10px -10px 0 darken($primary, 11%)
 
     .title
       font-size: 5.25rem
