--- a/src/assets/sass/_all.sass
+++ b/src/assets/sass/_all.sass
@@ -1,5 +1,9 @@
 //Bulma Overrides
-$yellow: #D9C077
+$blue: #468C7F
+$cyan: #A9D9D9
+$yellow: #F2C53D //#D9C077
+$tan: #F2D272
+$orange: #F2884B
 
 $grey-darker: #242426
 $grey-dark: hsl(0, 0%, 29%)
@@ -10,14 +14,14 @@ $white-ter: #D0D3D9
 
 $family-sans-serif: 'Raleway','Avenir Next','Helvetica Neue','Segoe UI','Helvetica','Arial',sans-serif
 $text: $grey-darker
-$primary: $yellow
+$primary: $blue
 $mobile: 576px !default
 $super-hd: 2560px !default
 
 $navbar-background-color: transparent
 $navbar-breakpoint: 2560px
 $navbar-height: 6.25rem
-$navbar-item-color: $grey-light
+$navbar-item-color: $yellow
 $navbar-item-hover-color: #ffffff
 $navbar-item-hover-background-color: transparent
 $navbar-padding-horizontal: 3rem
@@ -55,5 +59,6 @@ $navbar-padding-vertical: 0.5rem
 
 @import "./mixins.sass"
 @import "./helpers.sass"
+@import "./footer.sass"
 @import "./headers.sass"
 @import "./landing.sass"
