--- a/src/assets/sass/mixins.sass
+++ b/src/assets/sass/mixins.sass
@@ -9,3 +9,76 @@
   background-image: -o-linear-gradient($deg, $color1 $color1-percent, $color2 $color2-percent, $color3 $color3-percent, $color4 $color4-percent, $color5 $color5-percent)
   background-image: linear-gradient($deg, $color1 $color1-percent, $color2 $color2-percent, $color3 $color3-percent, $color4 $color4-percent, $color5 $color5-percent)
   background-repeat: repeat-x
+
+=bevel-text-left
+  text-shadow: 1px -1px 0 hsl(0, 0%, 93%), 2px -2px 0 hsl(0, 0%, 91%)
+  .bevel-text-item[data-text]
+    &:before
+      content: attr(data-text)
+      text-shadow: 3px -3px 0 hsl(0, 0%, 89%), 4px -4px 0 hsl(0, 0%, 87%), 5px -5px 0 hsl(0, 0%, 85%)
+    &:after
+      box-shadow: 1px -1px 0 darken($primary, 2%), 2px -2px 0 darken($primary, 3%)
+  &:after
+    box-shadow: 3px -3px 0 darken($primary, 4%), 4px -4px 0 darken($primary, 5%), 5px -5px 0 darken($primary, 6%), 6px -6px 0 darken($primary, 7%), 7px -7px 0 darken($primary, 8%), 8px -8px 0 darken($primary, 9%), 9px -9px 0 darken($primary, 10%), 10px -10px 0 darken($primary, 11%)
+
+@function text-extrude-function($color, $i, $r, $offset, $ratio)
+  $shadow: #{($r * $i)}px -#{$i}px 0 darken($color, round(percentage(($offset+($ratio * $i))/100)))
+  @return $shadow
+
+=text-extrude($text-color: $white, $text-depth: 5, $right: false, $underline-color: null, $underline-depth: 10, $underline-breakpoint: 2)
+  // $rsm = right side multiplier
+  $rsm: 1
+  @if $right
+    $rsm: -1
+
+  @if $underline-color != null
+    $text-list-front: ()
+    $text-list-back: ()
+    $underline-list-front: ()
+    $underline-list-back: ()
+    @for $i from 1 through $text-depth
+      @if $i <= $underline-breakpoint
+        $text-list-front: append($text-list-front, text-extrude-function($text-color, $i, $rsm, 6, 2), comma)
+      @else
+        $text-list-back: append($text-list-back, text-extrude-function($text-color, $i, $rsm, 6, 2), comma)
+    @for $i from 1 through $underline-depth
+      @if $i <= $underline-breakpoint
+        $underline-list-front: append($underline-list-front, text-extrude-function($underline-color, $i, $rsm, 2, 1), comma)
+      @else
+        $underline-list-back: append($underline-list-back, text-extrude-function($underline-color, $i, $rsm, 2, 1), comma)
+    text-shadow: $text-list-front
+    z-index: 0
+    .text-extrude-item[data-text]
+      color: inherit
+      &:before
+        content: attr(data-text)
+        color: inherit
+        font-size: inherit
+        font-weight: inherit
+        position: absolute
+        text-shadow: $text-list-back
+        z-index: -2
+      &:after
+        background-color: $underline-color
+        bottom: 0.25rem
+        box-shadow: $underline-list-front
+        content: ''
+        height: 1rem
+        left: -0.5rem
+        position: absolute
+        width: 105%
+        z-index: -1
+    &:after
+      box-shadow: $underline-list-back
+      bottom: 0.25rem
+      content: ''
+      height: 1rem
+      left: -0.5rem
+      position: absolute
+      width: 105%
+      z-index: -3
+  @else
+    $text-list-front: ()
+    @for $i from 1 through $text-depth
+      $text-list-front: append($text-list-front, text-extrude-function($text-color, $i, $rsm, 6, 2), comma)
+    text-shadow: $text-list-front
