Update body and html colors

--- a/src/assets/sass/_all.sass
+++ b/src/assets/sass/_all.sass
@@ -12,6 +12,7 @@ $grey-light: hsl(0, 0%, 71%)
 $grey-lighter: hsl(0, 0%, 86%)
 $white-ter: #D0D3D9
 
+$body-background-color: $grey-darker
 $family-sans-serif: 'Raleway','Avenir Next','Helvetica Neue','Segoe UI','Helvetica','Arial',sans-serif
 $text: $grey-darker
 $primary: $blue
